# COLLETRA

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/COLLETRA_backend/: Cargo.toml
src/COLLETRA_backend/src/: alert.rs  analytics.rs  auth.rs  contract.rs  lib.rs  loan.rs  state.rs  tx_log.rs
src/COLLETRA_frontend/: package.json
src/COLLETRA_frontend/ic/: auth.js  canister.js
src/COLLETRA_frontend/src/: App.css  App.jsx  main.jsx
src/COLLETRA_frontend/src/components/: ChartTooltip.jsx  DashboardCard.jsx  GlassCard.jsx  LoanHealthMeter.jsx  MobileNav.jsx  NeonButton.jsx  RepaymentTimer.jsx  Sidebar.jsx
src/COLLETRA_frontend/src/pages/: AdminDashboard.jsx  BorrowerDashboard.jsx  LandingPage.jsx  LenderDashboard.jsx  LoanApplicationPage.jsx  LoanHealthPage.jsx  ProfilePage.jsx  RoleSelectionPage.jsx
