[package]
name = "COLLETRA_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

candid = "0.9"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-stable-structures = "0.6"
serde = "1.0.197"
serde_json = "1.0.115"
num-traits = "0.2.17"